// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Commons/ProductItem Default 1`] = `
<div>
  <a
    href="/products/slug"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <img
      alt=""
      src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cHJvZHVjdHxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80"
    />
    <div>
      <span
        className="leading-5 text-body"
      >
        Example Product
      </span>
    </div>
    <div>
      <span
        className="leading-5 text-body"
      >
        100
      </span>
    </div>
  </a>
</div>
`;

exports[`Storyshots Features/Product/ProductItem Default 1`] = `
<div>
  <a
    href="/products/slug-i.undefined"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <img
      alt=""
      src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cHJvZHVjdHxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80"
    />
    <div>
      <span
        className="leading-5 text-body"
      >
        Example Product
      </span>
    </div>
    <div>
      <span
        className="leading-5 text-body"
      >
        100
      </span>
    </div>
  </a>
</div>
`;
